# Apolo11-simulator

./: README.md  devices_list.json  devices_list.py  pyproject.toml  report.txt  ruff.toml  tree.md
apollo11_simulator/: __main__.py  decorators.py  logger.py  operations.py  utils.py
apollo11_simulator/common/: __init__.py  logger.py  utils.py
apollo11_simulator/config/: __init__.py  config.yaml  logger.py
apollo11_simulator/exceptions/: __init__.py  unfound_events_error.py
apollo11_simulator/models/event_processing/: device.py  device_status.py  event_manager.py  mission.py  service_type.py
apollo11_simulator/models/report_processing/: report_builder.py  report_title.py  task_calculator.py
input_data/: simulation.json
src/: main.py  test.py  utils.py
src/models/event_processing/: colony_moon.py  device.py  device_status.py  event_manager.py  galaxy_two.py  mission.py  orbit_one.py  service_type.py  test.py  unkn.py  vac_mars.py
src/models/generator/: colony_moon.py  device.py  device_status.py  event_generator.py  galaxy_two.py  mission.py  orbit_one.py  unkn.py  vac_mars.py
src/models/report_processing/: report_builder.py
src/models/reporter/: reporter.py
tests/: conftest.py  generate_hash_test.py  test_event_manager.py  test_unkn.py  test_utils.py
tests/test_data/: corrupt.json  corrupt.yaml  good.json  good.yaml
